--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ body {
 h1 {
   font-size: 28px;
 }
+h2 {
+  font-size: 20px;
+  color: #ffffff;
+  font-family: 'Inter', Arial, sans-serif;
+}
 .container {
   display: flex;
   flex-direction: row;
@@ -21,13 +26,14 @@ h1 {
   background-color: hsl(244, 37%, 16%);
   border-radius: 10px;
   height: 100%;
+  overflow: auto;
 }
 .card {
   display: flex;
   justify-items: center;
   flex-direction: column;
   align-items: left;
-  padding: 40px;
+  margin: 40px;
   width: 50%;
 }
 .card-header {
@@ -44,6 +50,22 @@ h1 {
   color: hsl(0, 0%, 100%);
   font-weight: 400;
   font-family: 'Lexend Deca', Arial, sans-serif;
+  margin-bottom: 40px;
+}
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.stats h2 {
+  margin-right: 10px;
+}
+.bottom_stats {
+  font-size: 10px;
+  font-family: 'Lexend Deca', Arial, sans-serif;
+  color: #9795ad;
+  font-weight: 400;
 }
 .hero { 
   border-radius: 0 10px 10px 0;
@@ -53,14 +75,14 @@ h1 {
   height: 100%;
   border-radius: 0 10px 10px 0;
   object-fit: cover;
+  filter: sepia(40%) saturate(500%) hue-rotate(226deg) contrast(90%);
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 480px) {
   .container {
     flex-direction: column-reverse;
   }
   .card {
     width: 85%;
-    padding: 40px;
   }
   .hero {
     width: 100%;
@@ -71,6 +93,15 @@ h1 {
     width: 100%;
     height: auto;
     border-radius: 10px 10px 0 0;
+  }
+  .stats {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .stats h2 {
+    margin-right: 0;
   }
   
 }
